--- a/k8s/server-api.yaml
+++ b/k8s/server-api.yaml
@@ -16,6 +16,26 @@ spec:
     spec:
       containers:
         - env:
+            - name: AWS_REGION
+              valueFrom:
+                configMapKeyRef:
+                  key: aws_region
+                  name: server-env
+            - name: AWS_S3_POSTS_BUCKET_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: aws_s3_posts_bucket_name
+                  name: server-env
+            - name: AWS_S3_PROFILES_BUCKET_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: aws_s3_profiles_bucket_name
+                  name: server-env
+            - name: DOMAIN_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: domain_name
+                  name: server-env
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
