--- a/k8s/credentials.yaml
+++ b/k8s/credentials.yaml
@@ -5,14 +5,14 @@ metadata:
   labels:
     app.kubernetes.io/name: psql-db-secret
 data:
-  postgres_db: <base64-secret-data>
-  postgres_password: <base64-secret-data>
-  postgres_user: <base64-secret-data>
-  aws_access_key_id: <base64-secret-data>
-  aws_secret_access_key: <base64-secret-data>
-  public_firebase_api_key: <base64-secret-data>
-  public_firebase_app_id: <base64-secret-data>
-  public_firebase_project_id: <base64-secret-data>
-  public_firebase_auth_domain: <base64-secret-data>
-  public_firebase_messaging_sender_id: <base64-secret-data>
-  public_firebase_storage_bucket: <base64-secret-data>
+  postgres_db: dGVzdF9kYg==
+  postgres_password: dGVzdF9wYXNz
+  postgres_user: dGVzdF91c2Vy
+  minio_root_user: cnQ0NTY1NDYzMTRnZjVmdW43dmdyCg==
+  minio_root_password: Zm9qaW9qcjM0NDU2ZXRqaXJlZzM0NjUzNmppcmdrcmlqZ3Jrb280NQo=
+  public_firebase_api_key: QUl6YVN5QkhEaWVzTmZtaDhXcmFsRHNZZ09IZl9lV1dSQ2VjZzlz
+  public_firebase_app_id: MTo3MjQ1MDM5Mjc5Mzc6d2ViOmNlYjE2YmE1ZDEyMmM5ZmYyYzAxODA=
+  public_firebase_project_id: c2ltcGxlLXBob3RvLXNoYXJpbmctcGxhdGZvcm0=
+  public_firebase_auth_domain: c2ltcGxlLXBob3RvLXNoYXJpbmctcGxhdGZvcm0uZmlyZWJhc2VhcHAuY29t
+  public_firebase_messaging_sender_id: NzI0NTAzOTI3OTM3
+  public_firebase_storage_bucket: c2ltcGxlLXBob3RvLXNoYXJpbmctcGxhdGZvcm0uYXBwc3BvdC5jb20=
