--- a/k8s/server-env-configmap.yaml
+++ b/k8s/server-env-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  aws_region: ca-central-1
-  aws_s3_posts_bucket_name: spsp-post-images-01
-  aws_s3_profiles_bucket_name: spsp-profile-images-01
+  minio_region: ca-central-1
+  minio_posts_bucket_name: spsp-post-images-01
+  minio_profiles_bucket_name: spsp-profile-images-01
   domain_name: spspdemo.online
 kind: ConfigMap
 metadata:
