[SPSP-168] Add MinIO S3-compatible object storage
* Update gitlink to simple-photo-sharing-platform

* Update server image to 2.0.0

* Add minio-db to release compose

* Add minio-db to k8s

* Fix credentials for minio

--- a/k8s/credentials.yaml
+++ b/k8s/credentials.yaml
@@ -8,8 +8,8 @@ data:
   postgres_db: <base64-secret-data>
   postgres_password: <base64-secret-data>
   postgres_user: <base64-secret-data>
-  aws_access_key_id: <base64-secret-data>
-  aws_secret_access_key: <base64-secret-data>
+  minio_root_user: <base64-secret-data>
+  minio_root_password: <base64-secret-data>
   public_firebase_api_key: <base64-secret-data>
   public_firebase_app_id: <base64-secret-data>
   public_firebase_project_id: <base64-secret-data>
